<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@android:color/white"
    android:clickable="true"
    android:importantForAccessibility="no"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/drawer_stylelist_ibutton_close"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/drawer_stylelist_ibutton_close_contentDescription"
            app:srcCompat="@drawable/ic_cross_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/drawer_stylelist_tview_filters_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_stylelist_subtitle_height"
        android:background="#fff3f3f3"
        android:paddingBottom="@dimen/drawer_stylelist_subtitle_padding_bottom">

        <TextView
            android:id="@+id/drawer_stylelist_tview_hairlength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_stylelist_tview_hairlength_text"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/drawer_stylelist_rgroup_hairlength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp">

        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="All" />

        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Short" />


        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Medium" />

        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Long" />
    </RadioGroup>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_stylelist_subtitle_height"
        android:background="#fff3f3f3"
        android:paddingBottom="@dimen/drawer_stylelist_subtitle_padding_bottom">

        <TextView
            android:id="@+id/drawer_stylelist_tview_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_stylelist_tview_gender_text"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/drawer_stylelist_rgroup_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_stylelist_radiogroup_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp">

        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Male" />


        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Female" />
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_stylelist_subtitle_height"
        android:background="#fff3f3f3"
        android:paddingBottom="@dimen/drawer_stylelist_subtitle_padding_bottom">

        <TextView
            android:id="@+id/drawer_stylelist_tview_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_stylelist_tview_theme_text"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/drawer_stylelist_rgroup_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_stylelist_radiogroup_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp">

        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_formal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Formal" />


        <RadioButton
            android:id="@+id/drawer_stylelist_rbutton_casual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Casual" />

    </RadioGroup>

    <Button
        android:layout_gravity="center"
        android:id="@+id/drawer_stylelist_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done" />
</LinearLayout>